<resources>
    <!-- Strings related to login -->
    <string name="prompt_email">이메일을 입력하세요</string>
    <string name="prompt_password">비밀번호를 입력하세요</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="favorite">찜 목록</string>
    <string name="recent_list">최근 본 목록</string>
    <string name="my_review">나의 후기</string>
    <string name="inquiry_details">문의 내역</string>
    <string name="frequently_asked_questions">자주 찾는 질문</string>
    <string name="back">뒤로</string>
    <string name="kakao_rest_key">KakaoAK 6dab3d81953b7e9d367bcb471caac283</string>
    <string name="kakao_app_key">221d060d466e70f549f05dd352b81cb5</string>
    <string name="kakao_scheme">kakao221d060d466e70f549f05dd352b81cb5</string>
    <string name="kakaolink_host">kakaolink</string>

    <string name="scheme_main">main</string>
    <string name="scheme_detail">detail</string>
    <string name="notification">알림</string>
    <string name="notification_set">알림 설정</string>
    <string name="sound">소리</string>
    <string name="vibrate">진동</string>
    <string name="border_lightgrey_1dp">border</string>
    <string name="login">로그인</string>
    <string name="email_tv_basic">이메일</string>
    <string name="email_tv_fail">이메일 형식이 올바르지 않습니다</string>
    <string name="pw_tv_basic">비밀번호</string>
    <string name="pw_tv_fail">비밀번호를 다시 확인하세요</string>
    <string name="footer">서울특별시 서초구 강남대로 341, 삼원빌딩 807호\n대표이사 : 김주영ㅣ사업자번호 : 592–81–01701\n대표번호 : 02-523-0320 (평일 09:00 ~ 18:00)\nCopyright © 2020 GoodChoice Inc. All rights reserved.</string>
    <string name="home_title">오늘은\n어디 가서 어떤 맛있는 걸 먹지?</string>
    <string name="require_login">로그인이 필요한 서비스 입니다.\n로그인 화면으로 이동 하시겠습니까?</string>
    <string name="terms_title_sub1">제 1 조 (목적)</string>
    <string name="terms_title_main1">[1장 총칙]</string>
    <string name="terms_contents1_1">본 약관은 (주)굿초이스(이하 &quot;회사&quot;)이 홈페이지 및 어플리케이션 등을 통하여 제공하는 오늘은 서비스(이하 &quot;서비스&quot;)와 관련하여 &quot;회사&quot;와 &quot;회원&quot;(제2조에서 정의합니다) 간의 권리, 의무, 책임사항 및 &quot;회원&quot;의 &quot;서비스&quot; 이용 절차에 관한 사항을 규정함을 목적으로 합니다.</string>
    <string name="mypage_withdrawal_warning">1. 회원 탈퇴 시, 현재 로그인된 아이디는 즉시 탈퇴 처리됩니다. \n2. 회원 탈퇴 시, 회원 전용 웹 서비스 이용이 불가합니다. \n3. 탈퇴 시 회원 정보 및 찜 서비스, 등록한 게시물 이용 기록이 모두 삭제됩니다. \n4. 회원 정보 및 서비스 이용 기록은 모두 삭제되며, 삭제된 데이터는 복구되지 않습니다.</string>
</resources>
