<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="com.goodchoice.android.ohneulen.ui.mypage.MyPage" />

        <variable
            name="viewModel"
            type="com.goodchoice.android.ohneulen.ui.mypage.MyPageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/mypage_info"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle_transparent"
            android:focusable="true"
            android:onClick="@{fragment::infoClick}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mypage_nickName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{fragment::infoClick}"
            android:text="닉네임"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/mypage_info"
            app:layout_constraintLeft_toRightOf="@id/mypage_info"
            app:layout_constraintTop_toTopOf="@id/mypage_info" />

        <TextView
            android:id="@+id/mypage_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{fragment::infoClick}"
            android:text="로그인"
            app:layout_constraintLeft_toLeftOf="@id/mypage_info"
            app:layout_constraintRight_toRightOf="@id/mypage_info"
            app:layout_constraintTop_toBottomOf="@id/mypage_info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mypage_email">

            <TextView
                android:id="@+id/mypage_good"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:focusable="true"
                android:onClick="@{fragment::goodClick}"
                android:text="@string/good" />

            <TextView
                android:id="@+id/mypage_recentList"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:focusable="true"
                android:text="@string/recent_list" />

            <TextView
                android:id="@+id/mypage_review"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:focusable="true"
                android:onClick="@{fragment::reviewClick}"
                android:text="@string/my_review" />

            <TextView
                android:id="@+id/mypage_questions"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:focusable="true"
                android:onClick="@{fragment::inquireClick}"
                android:text="@string/inquiry_details" />

            <TextView
                android:id="@+id/mypage_frequentlyQ"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:focusable="true"
                android:onClick="@{fragment::FAQClick}"
                android:text="@string/frequently_asked_questions" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>