<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.goodchoice.android.ohneulen.ui.login.Login" />

        <variable
            name="viewModel"
            type="com.goodchoice.android.ohneulen.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.Login">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:text="@={viewModel.memEmail}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/login_email_clear"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="@{fragment::emailClear}"
            android:text="x"
            app:layout_constraintBottom_toBottomOf="@id/login_email"
            app:layout_constraintRight_toRightOf="@id/login_email"
            app:layout_constraintTop_toTopOf="@id/login_email" />

        <EditText
            android:id="@+id/login_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:text="@={viewModel.memPw}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email" />

        <Button
            android:id="@+id/login_pw_clear"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="@{fragment::pwClear}"
            android:text="x"
            app:layout_constraintBottom_toBottomOf="@id/login_pw"
            app:layout_constraintRight_toRightOf="@id/login_pw"
            app:layout_constraintTop_toTopOf="@id/login_pw" />

        <Button
            android:id="@+id/login_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:onClick="@{fragment::submitClick}"
            android:text="로그인"
            app:layout_constraintTop_toBottomOf="@+id/login_pw" />

        <CheckBox
            android:id="@+id/login_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="자동로그인"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_submit" />

        <TextView
            android:id="@+id/login_find_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:onClick="@{fragment::findEmailClick}"
            android:text="아이디 찾기"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/login_find_pw" />

        <TextView
            android:id="@+id/login_find_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:onClick="@{fragment::findPwClick}"
            android:text="비밀번호 찾기"
            app:layout_constraintLeft_toRightOf="@id/login_find_email"
            app:layout_constraintRight_toLeftOf="@id/login_sign_up"
            app:layout_constraintTop_toTopOf="@id/login_find_email" />

        <TextView
            android:id="@+id/login_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{fragment::signUpClick}"
            android:text="회원가입"
            app:layout_constraintLeft_toRightOf="@id/login_find_pw"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/login_find_email" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>