<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="com.goodchoice.android.ohneulen.ui.mypage.MyPage" />

        <variable
            name="viewModel"
            type="com.goodchoice.android.ohneulen.ui.mypage.MyPageViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f6f6f6">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mypage_header"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/mypage_header_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="더보기"
                android:textSize="17dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/mypage_header_logout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{fragment::onLogoutClick}"
                android:paddingEnd="20dp"
                android:src="@drawable/mypage_logout"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mypage_login_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:onClick="@{fragment::onInfoClick}"
            android:paddingVertical="18dp"
            app:layout_constraintTop_toBottomOf="@id/mypage_header">

            <ImageView
                android:id="@+id/mypage_info"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/circle_transparent"
                android:focusable="true"
                android:onClick="@{fragment::onInfoClick}"
                android:src="@drawable/profile"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mypage_nickName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:onClick="@{fragment::onInfoClick}"
                android:text="닉네임"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/main_contents"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/mypage_email"
                app:layout_constraintLeft_toRightOf="@id/mypage_info"
                app:layout_constraintTop_toTopOf="@id/mypage_info"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/mypage_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:onClick="@{fragment::onInfoClick}"
                android:text="yaa@naver.com"
                android:textColor="#808080"
                android:textSize="13dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/mypage_info"
                app:layout_constraintLeft_toRightOf="@id/mypage_info"
                app:layout_constraintTop_toBottomOf="@id/mypage_nickName" />

            <TextView
                android:id="@+id/mypage_login"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:drawableRight="@drawable/more_point"
                android:gravity="center"
                android:onClick="@{fragment::onInfoClick}"
                android:text="로그인  "
                android:textColor="@color/colorTextBlack"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/mypage_info"
                app:layout_constraintLeft_toRightOf="@id/mypage_info"
                app:layout_constraintTop_toTopOf="@id/mypage_info" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/mypage_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mypage_login_area">

            <TextView
                android:id="@+id/mypage_good"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:drawableRight="@drawable/more_point"
                android:gravity="fill"
                android:onClick="@{fragment::onLikeClick}"
                android:paddingHorizontal="20dp"
                android:text="@string/favorite"
                android:textColor="@color/colorTextBlack"
                android:textSize="14dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:background="#e5e5e5" />


            <TextView
                android:id="@+id/mypage_recentList"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginHorizontal="20dp"
                android:drawableRight="@drawable/more_point"
                android:gravity="fill"
                android:onClick="@{fragment::onRecentClick}"
                android:text="@string/recent_list"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/main_contents"
                android:visibility="gone" />


            <TextView
                android:id="@+id/mypage_review"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginHorizontal="20dp"
                android:drawableRight="@drawable/more_point"
                android:focusable="true"
                android:gravity="fill"
                android:onClick="@{fragment::onReviewClick}"
                android:text="@string/my_review"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/main_contents"
                android:textStyle="bold"
                android:visibility="gone" />


            <TextView
                android:id="@+id/mypage_questions"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@color/white"
                android:drawableRight="@drawable/more_point"
                android:focusable="true"
                android:gravity="fill"
                android:onClick="@{fragment::onInquireClick}"
                android:paddingHorizontal="20dp"
                android:text="@string/inquiry_details"
                android:textColor="@color/colorTextBlack"
                android:textSize="14dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:background="#e5e5e5" />


            <TextView
                android:id="@+id/mypage_faq"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:drawableRight="@drawable/more_point"
                android:focusable="true"
                android:gravity="fill"
                android:onClick="@{fragment::onFAQClick}"
                android:paddingHorizontal="20dp"
                android:text="@string/frequently_asked_questions"
                android:textColor="@color/colorTextBlack"
                android:textSize="14dp" />


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mypage_con"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f6f6f6"
            android:paddingHorizontal="20dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/mypage_company_name">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="39dp"
                    android:onClick="@{fragment::onTermsClick}"
                    android:paddingTop="20dp"
                    android:text="이용약관"
                    android:textSize="13dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" | "
                    android:textSize="13dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="39dp"
                    android:onClick="@{fragment::onTerm2Click}"
                    android:paddingTop="20dp"
                    android:text="개인정보처리방침"
                    android:textSize="13dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" | "
                    android:textSize="13dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="39dp"
                    android:onClick="@{fragment::onCompanyClick}"
                    android:paddingTop="20dp"
                    android:text="회사소개"
                    android:textSize="13dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" | "
                    android:textSize="13dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="39dp"
                    android:onClick="@{fragment::onContactUsClick}"
                    android:paddingTop="20dp"
                    android:text="사업제휴"
                    android:textSize="13dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/mypage_company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(주)굿초이스"
                android:textColor="@color/colorGrey88"
                android:textSize="12dp"
                app:layout_constraintBottom_toTopOf="@id/mypage_footer"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/mypage_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/notosanskr_light"
                android:includeFontPadding="false"
                android:paddingBottom="30dp"
                android:text="@string/footer"
                android:textColor="@color/colorGrey88"
                android:textSize="12dp"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>